Varios Ajustes(Perfil, Visualizar...)

--- a/ProjectoEsw/Views/Candidato/EditarPerfilSucesso.cshtml
+++ b/ProjectoEsw/Views/Candidato/EditarPerfilSucesso.cshtml
@@ -21,8 +21,8 @@
 }
 <!--Home-->
 <div class="jumbotron col-sm-8">
-    <h2 class=" text-center"><strong>Erro na Candidatura</strong></h2>
-    <p><strong>Voce ja possui uma candidatura, não pode efectuar duas candidaturas em simultaneo</strong></p>
+    <h2 class=" text-center"><strong>Perfil editado com sucesso</strong></h2>
+    <p><strong>O seu perfil goi editado com sucesso e guardado.</strong></p>
     <a asp-area="" asp-controller="Candidato" asp-action="Index" class="btn btn-link btn-xs text-center center-block">Voltar Pagina Inicial</a>
 </div>
 
