--- a/ProjectoEsw/Views/Shared/_Layout.cshtml
+++ b/ProjectoEsw/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
     <script src="~/js/site.js"></script>
     <script>
         $(document).ready(function () {
-            $('[data-toggle="popover"]').popover();
+                $('[data-toggle="popover"]').popover({ container: 'body' });
         });
     </script>
 </head>
