--- a/ProjectoEsw/Views/Candidato/AlterarCandidaturaSucesso.cshtml
+++ b/ProjectoEsw/Views/Candidato/AlterarCandidaturaSucesso.cshtml
@@ -8,7 +8,6 @@
 }
 @section Home{
     <a asp-area="" asp-controller="Candidato" asp-action="Index">Home</a>
-
 }
 @section ProgramasMobilidade{
     <a asp-area="" asp-controller="Candidato" asp-action="ProgramasMobilidade">Programas Mobilidade</a>
@@ -21,8 +20,8 @@
 }
 <!--Home-->
 <div class="jumbotron col-sm-8">
-    <h2 class=" text-center"><strong>Erro na Candidatura</strong></h2>
-    <p><strong>Voce ja possui uma candidatura, não pode efectuar duas candidaturas em simultaneo</strong></p>
+    <h2 class=" text-center"><strong>Candidatura efectuada com sucesso</strong></h2>
+    <p><strong>A sua Candidatura foi alterada com sucesso e foi submetida para analise. Será notificado quando a sua candidatura for analisada</strong></p>
     <a asp-area="" asp-controller="Candidato" asp-action="Index" class="btn btn-link btn-xs text-center center-block">Voltar Pagina Inicial</a>
 </div>
 
