--- a/ProjectoEsw/Views/Candidato/ProgramasMobilidade.cshtml
+++ b/ProjectoEsw/Views/Candidato/ProgramasMobilidade.cshtml
@@ -21,13 +21,27 @@
 <!--Candidato-->
 <div class="col-sm-8 jumbotron ">
     <div class="col-sm-6">
-        <h3>Erasmus+</h3>
-        <p> Resto Informacao + links + prazos</p>
+        <h3 class="text-center">Erasmus+</h3>
+        <div class="help-block"></div>
+        <p><font size="2">  Erasmus + é o programa da UE para apoiar educação, formação, juventude e desporto na Europa. O seu orçamento de € 14,7 bilhões proporcionará oportunidades para mais de 4 milhões de europeus para estudar, treinar, ganhar experiência e se voluntariar no exterior.</font></p>
+        <p><font size="2">  Definir para durar até 2020, a Erasmus + não só tem oportunidades para estudantes. Combinando sete programas anteriores, tem oportunidades para uma grande variedade de indivíduos e organizações.</font></p>
+        <p><font size="2">  Admissão de candidaturas para o 1º Semestre - abertas até 30 de Novembro de 2017</font></p>
+        <p><font size="2">  Admissão de candidaturas para o 2º Semestre - abertas até 30 de Abril de 2017</font></p>
+        <p><font size="2">Para mais informacoes pode consultar </font></p>
+        <p><font size="2">- O site do <a href="https://www.ips.pt/ips_si/web_base.gera_pagina?P_pagina=30435">Instituto Politecnico de Setubal</a></font></p>
+        <p><font size="2">- O site da <a href="https://ec.europa.eu/programmes/erasmus-plus/about_en">Comissão Europeia</a></font></p>
+
         <a asp-area="" asp-controller="Candidato" asp-action="CandidaturaErasmus" class="btn btn-default center-block">Candidatar-me</a>
     </div>
     <div class="col-sm-6">
-        <h3>Programa Santander</h3>
-        <p> Resto Informacao + links + prazos</p>
+        <h3 class="text-center">Programa Santander</h3>
+        <div class="help-block"></div>
+        <p><font size="2">  O programa Vasco da Gama é um programa de mobilidade de estudantes do ensino superior politécnico baseado em atividades que integrem o plano curricular do curso na escola de origem (estudos, estágios, projetos).</font></p>
+        <p><font size="2">  Esta mobilidade prevê um acordo entre as instituições de origem e de acolhimento, formalizado a partir das assinaturas dos responsáveis nos documentos mencionados abaixo.</font></p>
+        <p><font size="2"> Para mais informacoes pode consultar </font></p>
+        <p><font size="2">  Admissão de candidaturas para o 1º Semestre - abertas até 30 de Novembro de 2017</font></p>
+        <p><font size="2">  Admissão de candidaturas para o 2º Semestre - abertas até 30 de Abril de 2017</font></p>
+        <p><font size="2">- O site do <a href="https://www.ips.pt/ips_si/web_base.gera_pagina?P_pagina=30435">Instituto Politecnico de Setubal</a></font></p>
         <a asp-area="" asp-controller="Candidato" asp-action="CandidaturaSantander" class="btn btn-default center-block">Candidatar-me</a>
     </div>
   </div>
