--- a/ProjectoEsw/Views/Home/ProgramasMobilidade.cshtml
+++ b/ProjectoEsw/Views/Home/ProgramasMobilidade.cshtml
@@ -16,13 +16,29 @@
     <a asp-area="" asp-controller="Home" asp-action="SobreNos">Sobre Nós</a>
 }
 <!--Home-->
-<h1 class="text-center">Programas Mobilidade</h1>
 
-<div class="jumbotron col-sm-5">
-    <h3 class="text-center">Erasmus+</h3>
-    <p class="text-center">Resto Informacao</p>
-</div>
-<div class="jumbotron col-sm-5 col-sm-offset-1">
-    <h3 class="text-center">Programa Santander</h3>
-    <p class="text-center"> Resto Informacao</p>
+<div class="jumbotron col-sm-12">
+    <h2 class="text-center">Programas Mobilidade</h2>
+    <div class="col-sm-6">
+        <h3 class="text-center">Erasmus+</h3>
+        <div class="help-block"></div>
+        <p><font size="2">  Erasmus + é o programa da UE para apoiar educação, formação, juventude e desporto na Europa. O seu orçamento de € 14,7 bilhões proporcionará oportunidades para mais de 4 milhões de europeus para estudar, treinar, ganhar experiência e se voluntariar no exterior.</font></p>
+        <p><font size="2">  Definir para durar até 2020, a Erasmus + não só tem oportunidades para estudantes. Combinando sete programas anteriores, tem oportunidades para uma grande variedade de indivíduos e organizações.</font></p>
+        <p><font size="2">  Admissão de candidaturas para o 1º Semestre - abertas até 30 de Novembro de 2017</font></p>
+        <p><font size="2">  Admissão de candidaturas para o 2º Semestre - abertas até 30 de Abril de 2017</font></p>
+        <p><font size="2"   >Para mais informacoes pode consultar </font></p> 
+        <p><font size="2">- O site do <a href="https://www.ips.pt/ips_si/web_base.gera_pagina?P_pagina=30435">Instituto Politecnico de Setubal</a></font></p>
+        <p><font size="2">- O site da <a href="https://ec.europa.eu/programmes/erasmus-plus/about_en">Comissão Europeia</a></font></p>
+        
+    </div>
+    <div class="col-sm-offset-6">
+        <h3 class="text-center">Programa Santander</h3>
+        <div class="help-block"></div>
+        <p><font size="2">  O programa Vasco da Gama é um programa de mobilidade de estudantes do ensino superior politécnico baseado em atividades que integrem o plano curricular do curso na escola de origem (estudos, estágios, projetos).</font></p>
+        <p><font size="2">  Esta mobilidade prevê um acordo entre as instituições de origem e de acolhimento, formalizado a partir das assinaturas dos responsáveis nos documentos mencionados abaixo.</font></p>
+        <p><font size="2"> Para mais informacoes pode consultar </font></p>
+        <p><font size="2">  Admissão de candidaturas para o 1º Semestre - abertas até 30 de Novembro de 2017</font></p>
+        <p><font size="2">  Admissão de candidaturas para o 2º Semestre - abertas até 30 de Abril de 2017</font></p>
+        <p><font size="2">- O site do <a href="https://www.ips.pt/ips_si/web_base.gera_pagina?P_pagina=30435">Instituto Politecnico de Setubal</a></font></p>
+    </div>
 </div>
