--- a/ProjectoEsw/wwwroot/css/site.css
+++ b/ProjectoEsw/wwwroot/css/site.css
@@ -71,3 +71,7 @@ input[type=number]::-webkit-outer-spin-button {
 .fc-button-content {
     padding: 0;
 }
+.popover-medium {
+    max-width: 1000px;
+    max-height: 1000px;
+}
