--- a/ProjectoEsw/Views/Home/ConfirmarPassword.cshtml
+++ b/ProjectoEsw/Views/Home/ConfirmarPassword.cshtml
@@ -21,8 +21,8 @@
     <a asp-area="" asp-controller="Home" asp-action="SobreNos">Sobre Nós</a>
 }
 <div class="jumbotron">
-    <h2 class=" text-center"><strong>Reset Password</strong></h2>
-    <p><strong>Verifique a sua caixa de correio para efectuar o reset de password. </strong></p>
+    <h2 class=" text-center"><strong>Reset Password Email</strong></h2>
+    <p><strong>Foi enviado um email com o com o link, verifique a sua caixa de correio para efectuar o reset de password. </strong></p>
     <a asp-area="" asp-controller="Home" asp-action="Index" class="btn btn-link btn-xs text-center">Voltar Pagina Inicial</a>
 </div>
 
