--- a/ProjectoEsw/Views/Candidato/EditarPerfil.cshtml
+++ b/ProjectoEsw/Views/Candidato/EditarPerfil.cshtml
@@ -4,6 +4,7 @@
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
 
 
+
 @section links {
     <a asp-area="" asp-controller="Candidato" asp-action="Logout" class="btn btn-link btn-xs pull-right">Log Out</a>
     <a asp-area="" asp-controller="Candidato" asp-action="Perfil" class="btn btn-link btn-xs pull-right"> @Model.Email </a>
@@ -20,11 +21,14 @@
 @section SobreNos{
     <a asp-area="" asp-controller="Candidato" asp-action="SobreNos">Sobre Nós</a>
 }
-<div class="jumbotron col-sm-7 col-sm-offset-1">
-    <span class="glyphicon glyphicon-question-sign" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaPagina("Home.EditarPerfil").Descricao"></span>
-
-    <div class="container col-lg-offset-1 col-sm-10">
-        <h2 class="text-center">Editar Perfil</h2>
+<div class="jumbotron col-sm-8">
+    <div style="display:inline" class="col-sm-12">
+        <span class="glyphicon glyphicon-question-sign pull-right" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaPagina("Home.EditarPerfil").Descricao"></span>
+            <a class="btn btn-link btn-sm center-block" onclick="mudarDiv('2')">Editar perfil</a>
+            <a class="btn btn-link btn-sm center-block" onclick="mudarDiv('1')">Alterar password</a>
+    </div>
+    <div id ="1" class="container col-sm-offset-2 col-sm-8">
+        <h2 class="text-center" style="padding-top:5px;">Editar Perfil</h2>
         <form class="form-horizontal" asp-controller="Candidato" asp-action="EditarPerfil" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
@@ -66,32 +70,48 @@
             </div>
         </form>
     </div>
+    <div id="2" style="display:none" class="container col-sm-8 col-sm-offset-2 ">
+            <h2 class="text-center">Alterar Password</h2>
+            <form class="form-horizontal" asp-controller="Candidato" asp-action="AlterarPassword" method="post">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="form-group">
+                    <div class=" help-block"></div>
+                    <input asp-for="Password" placeholder="Nova Password" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Password").Descricao">
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                    <div class=" help-block"></div>
+                    <input asp-for="ConfirmPassword" placeholder="Confirmar Nova Password" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Confirmar Nova Password").Descricao">
+                    <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                    <div class=" help-block"></div>
+                </div>
+                <div class="form-group">
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-default">Alterar</button>
+                    </div>
+                </div>
+            </form>
+        </div>
 </div>
+
 <div class="jumbotron col-sm-3 col-sm-offset-1">
     <h5 class="text-center">Opcoes</h5>
     <a asp-area="" asp-controller="Candidato" asp-action="VisualizarCandidatura" class="btn btn-link btn-xs pull-right col-sm-12">Ver Candidatura</a>
     <a asp-area="" asp-controller="Candidato" asp-action="Perfil" class="btn btn-link btn-xs pull-right col-sm-12">Ver Perfil</a>
     <a asp-area="" asp-controller="Candidato" asp-action="EditarPerfil" class="btn btn-link btn-xs center-block col-sm-12">Editar Perfil</a>
 </div>
-<div class="jumbotron col-sm-7 col-sm-offset-1">
-    <div class="container col-lg-offset-1 col-sm-10">
-        <h2 class="text-center">Alterar Password</h2>
-        <form class="form-horizontal" asp-controller="Candidato" asp-action="AlterarPassword" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <div class=" help-block"></div>
-                <input asp-for="Password" placeholder="Nova Password" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Password").Descricao">
-                <span asp-validation-for="Password" class="text-danger"></span>
-                <div class=" help-block"></div>
-                <input asp-for="ConfirmPassword" placeholder="Confirmar Nova Password" class="form-control"  data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Confirmar Nova Password").Descricao">
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-                <div class=" help-block"></div>
-            </div>
-            <div class="form-group">
-                <div class="text-center">
-                    <button type="submit" class="btn btn-default">Alterar</button>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
+<script>
+    function mudarDiv(tipo) {
+        var div1 = document.getElementById("1");
+        var div2 = document.getElementById("2");
+        if (tipo == "1") {
+            div1.style.display = "none"
+            div2.style.display = "block"
+        }
+
+        if (tipo == "2") {
+
+            div1.style.display = "block"
+            div2.style.display = "none"
+        }
+    }
+
+</script>
