--- a/ProjectoEsw/Views/Home/Login.cshtml
+++ b/ProjectoEsw/Views/Home/Login.cshtml
@@ -33,7 +33,7 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-default">Sign in</button>
+                <button type="submit" class="btn btn-default">Iniciar sessão</button>
                 <a asp-area="" asp-controller="Home" asp-action="RecuperarPassword" class="btn btn-link btn-xs">Recuperar Password</a>
             </div>
         </form>
