--- a/ProjectoEsw/Views/Candidato/ProgramasMobilidade.cshtml
+++ b/ProjectoEsw/Views/Candidato/ProgramasMobilidade.cshtml
@@ -25,8 +25,8 @@
         <h3 class="text-center">Programa Erasmus+</h3>
             <div class="help-block"></div>
             <div style="display:inline-block; padding-bottom:5px" class="fc-button-group col-sm-12 text-center">
-                <button class="btn btn-default text-center" onclick="mudarDiv('divErasmus')">Programa Santander</button>
-                <button class="btn btn-default text-center" onclick="mudarDiv('divSantander')">Programa Erasmus</button>
+                <button class="btn btn-default text-center" onclick="mudarDiv('divErasmus')">Programa Erasmus+</button>
+                <button class="btn btn-default text-center" onclick="mudarDiv('divSantander')">Programa Vasco da gama</button>
             </div>
             <div class="help-block"></div>
         <p><font size="2">  O <strong>programa Erasmus + </strong>é um programa da UE para apoiar educação, formação, juventude e desporto na Europa. O seu orçamento de € 14,7 bilhões proporcionará oportunidades para mais de 4 milhões de europeus para estudar, treinar, ganhar experiência e se voluntariar no exterior.</font></p>
@@ -43,8 +43,8 @@
         <h3 class="text-center">Programa Vasco Da Gama</h3>
         <div class="help-block"></div>
         <div style="display:inline-block; padding-bottom:5px" class="fc-button-group col-sm-12 text-center">
-            <button class="btn btn-default text-center" onclick="mudarDiv('divErasmus')">Programa Santander</button>
-            <button class="btn btn-default text-center" onclick="mudarDiv('divSantander')">Programa Erasmus</button>
+            <button class="btn btn-default text-center" onclick="mudarDiv('divErasmus')">Programa Erasmus+</button>
+            <button class="btn btn-default text-center" onclick="mudarDiv('divSantander')">Programa Vasco da gama</button>
         </div>
         <div class="help-block"></div>
         <p><font size="2">  O <strong>programa Vasco da Gama</strong> é um programa de mobilidade de estudantes do ensino superior politécnico baseado em atividades que integrem o plano curricular do curso na escola de origem (estudos, estágios, projetos).</font></p>
@@ -61,8 +61,8 @@
          <h3 class="text-center">Programas Mobilidade</h3>
         <div class="help-block"></div>
         <div style="display:inline-block; padding-bottom:5px" class="fc-button-group col-sm-12 text-center">
-            <button class="btn btn-default text-center" onclick="mudarDiv('divErasmus')">Programa Santander</button>
-            <button class="btn btn-default text-center" onclick="mudarDiv('divSantander')">Programa Erasmus</button>
+            <button class="btn btn-default text-center" onclick="mudarDiv('divErasmus')">Programa Erasmus+</button>
+            <button class="btn btn-default text-center" onclick="mudarDiv('divSantander')">Programa Vasco da gama</button>
         </div>
         <div class="help-block"></div>
          <p><font size="2"> Esta pagina fornece a informação relativa aos tipos de<strong> programas de mobilidade</strong>, sendo possivel efectuar a canditura a uma programa de mobilidade aos utilizadores registados.</font></p>
