--- a/ProjectoEsw/Views/Candidato/ProgramasMobilidade.cshtml
+++ b/ProjectoEsw/Views/Candidato/ProgramasMobilidade.cshtml
@@ -20,13 +20,12 @@
 }
 <!--Candidato-->
 <div class="col-sm-8 jumbotron ">
-
-        <div class="col-sm-12" id="divErasmus" style="display:none">
+     <div class="col-sm-12" id="divErasmus" style="display:none">
         <h3 class="text-center">Programa Erasmus+</h3>
             <div class="help-block"></div>
             <div style="display:inline-block; padding-bottom:5px" class="fc-button-group col-sm-12 text-center">
                 <button class="btn btn-default text-center" onclick="mudarDiv('divErasmus')">Programa Erasmus+</button>
-                <button class="btn btn-default text-center" onclick="mudarDiv('divSantander')">Programa Vasco da gama</button>
+                <button class="btn btn-default text-center" onclick="mudarDiv('divSantander')">Programa Santander</button>
             </div>
             <div class="help-block"></div>
         <p><font size="2">  O <strong>programa Erasmus + </strong>é um programa da UE para apoiar educação, formação, juventude e desporto na Europa. O seu orçamento de € 14,7 bilhões proporcionará oportunidades para mais de 4 milhões de europeus para estudar, treinar, ganhar experiência e se voluntariar no exterior.</font></p>
@@ -44,17 +43,18 @@
         <div class="help-block"></div>
         <div style="display:inline-block; padding-bottom:5px" class="fc-button-group col-sm-12 text-center">
             <button class="btn btn-default text-center" onclick="mudarDiv('divErasmus')">Programa Erasmus+</button>
-            <button class="btn btn-default text-center" onclick="mudarDiv('divSantander')">Programa Vasco da gama</button>
+            <button class="btn btn-default text-center" onclick="mudarDiv('divSantander')">Programa Santander</button>
         </div>
         <div class="help-block"></div>
-        <p><font size="2">  O <strong>programa Vasco da Gama</strong> é um programa de mobilidade de estudantes do ensino superior politécnico baseado em atividades que integrem o plano curricular do curso na escola de origem (estudos, estágios, projetos).</font></p>
-        <p><font size="2">  Esta mobilidade prevê um acordo entre as instituições de origem e de acolhimento, formalizado a partir das assinaturas dos responsáveis nos documentos mencionados abaixo.</font></p>
+        <p><font size="2"> O <strong>programa Santander Universidades</strong> é o intercâmbio de estudantes através do Programa de Bolsas Luso- Brasileiras Santander Universidades consiste na realização de um período de estudos.</font></p>
+        <p><font size="2"> O intercâmbio tem obrigatoriamente de estar abrangido por um Protocolo de Cooperação com uma instituição que integre a rede deste Programa.</font></p>
+        <p><font size="2">  A matrícula/inscrição e o pagamento das propinas efetuados no IPS são válidos para os estudos na universidade brasileira de destino, não havendo necessidade de qualquer matrícula adicional.</font></p>
         <p><font size="2"> Para mais informacoes pode consultar </font></p>
         <p><font size="2">- O site do <a href="https://www.ips.pt/ips_si/web_base.gera_pagina?P_pagina=30435">Instituto Politecnico de Setubal</a></font></p>
         <p><font size="2"><strong> Prazos</strong>: </font></p>
         <p><font size="2"> Candidaturas para o 1º Semestre - abertas até 30 de Novembro de 2017</font></p>
         <p><font size="2"> Candidaturas para o 2º Semestre - abertas até 30 de Abril de 2017</font></p>
-
+       
         <a asp-area="" asp-controller="Candidato" asp-action="CandidaturaSantander" class="btn btn-default center-block">Candidatar-me</a>
     </div>
     <div class="col-sm-12" id="divInicio">
@@ -62,7 +62,7 @@
         <div class="help-block"></div>
         <div style="display:inline-block; padding-bottom:5px" class="fc-button-group col-sm-12 text-center">
             <button class="btn btn-default text-center" onclick="mudarDiv('divErasmus')">Programa Erasmus+</button>
-            <button class="btn btn-default text-center" onclick="mudarDiv('divSantander')">Programa Vasco da gama</button>
+            <button class="btn btn-default text-center" onclick="mudarDiv('divSantander')">Programa Santander</button>
         </div>
         <div class="help-block"></div>
          <p><font size="2"> Esta pagina fornece a informação relativa aos tipos de<strong> programas de mobilidade</strong>, sendo possivel efectuar a canditura a uma programa de mobilidade aos utilizadores registados.</font></p>
