--- a/ProjectoEsw/Views/Erros/ErroCandidatura.cshtml
+++ b/ProjectoEsw/Views/Erros/ErroCandidatura.cshtml
@@ -22,7 +22,7 @@
 <!--Home-->
 <div class="jumbotron col-sm-8">
     <h2 class=" text-center"><strong>Erro na Candidatura</strong></h2>
-    <p><strong></strong></p>
+    <p><strong>Voce nao selecionou nenhuma instituição, por favor volte a tentar e selecione no minimo uma.</strong></p>
     <a asp-area="" asp-controller="Candidato" asp-action="Index" class="btn btn-link btn-xs text-center center-block">Voltar Pagina Inicial</a>
 </div>
 
