--- a/ProjectoEsw/Views/Home/ProgramasMobilidade.cshtml
+++ b/ProjectoEsw/Views/Home/ProgramasMobilidade.cshtml
@@ -37,7 +37,7 @@
         <a asp-area="" asp-controller="Candidato" asp-action="CandidaturaErasmus" class="btn btn-default center-block">Candidatar-me</a>
     </div>
     <div class="col-sm-12" id="divSantander" style="display:none">
-        <h3 class="text-center">Programa Vasco Da Gama</h3>
+        <h3 class="text-center">Programa Santander</h3>
         <div class="help-block"></div>
         <div style="display:inline-block; padding-bottom:5px" class="fc-button-group col-sm-12 text-center">
             <button class="btn btn-default text-center" onclick="mudarDiv1('divErasmus')">Programa Erasmus+</button>
