--- a/ProjectoEsw/Views/Tecnico/ListaCandidaturas.cshtml
+++ b/ProjectoEsw/Views/Tecnico/ListaCandidaturas.cshtml
@@ -45,7 +45,7 @@
             <button type="submit" class="btn btn-default">Analisar</button>
         }
     </div>
-</form>>
+</form>
     <div class="jumbotron col-sm-3 col-sm-offset-1">
         <h5 class="text-center">Opcoes</h5>
         <!--<a asp-area="" asp-controller="Tecnico" asp-action="Perfil" class="btn btn-link btn-xs pull-right col-sm-12">Ver Perfil</a>-->
