adicionado horas para as candidaturas, marcar entrevista,marcar reuniao

--- a/ProjectoEsw/Views/Candidato/Index.cshtml
+++ b/ProjectoEsw/Views/Candidato/Index.cshtml
@@ -55,12 +55,14 @@
 </div>
 
 
-@Html.Partial("Calendario",new ProjectoEsw.Models.Calendario.Eventos { });
+@Html.Partial("Calendario",new ProjectoEsw.Models.Calendario.Eventos { })
 
 @section calendario{
 <script> 
         CriarCalendario("Candidato", @Model.ID);
     </script>
 }
+
+
 
 
