--- a/ProjectoEsw/Views/Shared/_Layout.cshtml
+++ b/ProjectoEsw/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
     <script src="~/lib/fullcalendar/dist/fullcalendar.js"></script>
     <script src="~/lib/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
 
-    <script src="https://canvasjs.com/assets/script/canvasjs.min.js">
+    <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
         <script src="~/lib/fullcalendar/dist/locale/pt.js"></script>
     <script src="~/lib/moment/locale/pt.js"></script>
@@ -41,11 +41,9 @@
 <body>
     <div class="container">
         <div class="row">
-            @*dei lhe um col offset e col sm*@
             <div class="col-sm-offset-8 col-sm-4">
                 @RenderSection("links", required: true)                
             </div>
-            @*sm to xs*@
             <div class="col-xs-2">
                 <div class="sidebar-nav">
                     <img src="~/images/LogoIpsFinal.png" />
@@ -60,7 +58,6 @@
                             </button>
                             <span class="visible-xs navbar-brand">Sidebar menu</span>
                         </div>
-                        <!-- render section fazer-->
                         <div class="well text-center" role="button">
                             @RenderSection("Home", required: true)
                         </div>  
@@ -89,9 +86,11 @@
         <footer>
             <p>&copy; 2017 - ProjectoEsw</p>
         </footer>
+        @RenderSection("HorasFalta", required: false)
     </div>
 
 
     @RenderSection("Scripts", required: false)
+    
 </body>
 </html>
