update marcação reuniao e entrevista, calendario tecnico

--- a/ProjectoEsw/Views/Candidato/Index.cshtml
+++ b/ProjectoEsw/Views/Candidato/Index.cshtml
@@ -51,7 +51,8 @@
     <a asp-area="" asp-controller="Candidato" asp-action="VisualizarCandidatura" class="btn btn-link btn-xs pull-right col-sm-12">Ver Candidatura</a>
     <a asp-area="" asp-controller="Candidato" asp-action="Perfil" class="btn btn-link btn-xs pull-right col-sm-12">Ver Perfil</a>
     <a asp-area="" asp-controller="Candidato" asp-action="EditarPerfil" class="btn btn-link btn-xs center-block col-sm-12">Alterar Dados</a>
-   
+    <a asp-area="" asp-controller="Candidato" asp-action="MarcarReuniao" class="btn btn-link btn-xs center-block col-sm-12">Marcar Reuniao</a>
+    
 </div>
 
 
