--- a/ProjectoEsw/Views/Shared/TempoRestante.cshtml
+++ b/ProjectoEsw/Views/Shared/TempoRestante.cshtml
@@ -1,11 +1,27 @@
 ﻿<div>
+    <br />
     <label><span id="data1"></span></label>
     <label><span id="data1Fim"></span></label>
+    <br />
     <label><span id="data2"></span></label>
     <label><span id="data2Fim"></span></label>
 </div>
 
 <script type="text/javascript">
+    function HorasMinutosSegundos(momento) { 
+        var horas, minutos, segundos;
+        var segundos = momento % 60;
+        var minutos = Math.floor((momento % 3600) / 60);
+        var horas = Math.floor(momento / 3600);
+        return {
+            horas: horas,
+            minutos: minutos,
+            segundos: segundos
+
+        }
+    }
+
+
     function horas(DataActual) {
         $(document).ready(function () {
             var dataActual = moment(DataActual, "DD/MM/YYYY HH:mm");
@@ -16,37 +32,57 @@
                 success: function (data) {
                     var aux = [];
                     $.each(data, function (i, v) {
-                        var diffInicioActual = dataActual.diff(moment(new Date(v.dataInicio), "DD/MM/YYYY HH:mm"),"hours");
-                        var diffFimActual = dataActual.diff(moment(new Date(v.dataFim), "DD/MM/YYYY HH:mm"),"hours");
+                        var diffInicioActual = dataActual.diff(moment(new Date(v.dataInicio), "DD/MM/YYYY HH:mm"),"seconds");
+                        var diffFimActual = dataActual.diff(moment(new Date(v.dataFim), "DD/MM/YYYY HH:mm"),"seconds");
+
                         aux.push({
                             tipo: v.tipo,
                             data1: diffInicioActual,
                             data2: diffFimActual
                         });
                     });
-                    if (aux[0].data1 > 0) {
-                        $('#data1').text("Estamos em candidaturas tipo:" + aux[0].tipo);
-                    } else { 
-                        $('#data1').text("falta: "+aux[0].data1.toString()+" horas para iniciar a candidaura");
-                    }
+
 
                     if (aux[0].data2 > 0) {
-                        $('#data1Fim').text("Terminou candidaturas");
+                        $('#data1Fim').text("Terminou candidaturas do tipo :" + aux[0].tipo);
+                        $('#data1Fim').addClass("label label-danger");
                     } else {
-                        $('#data1Fim').text("falta: " + aux[0].data2.toString() * -1 + " horas para acabar a candidaura");
-                    }
+                        if (aux[0].data1 > 0) {
+                            var tempo = HorasMinutosSegundos(aux[0].data2 * -1);
+                            $('#data1').text("Estamos em candidaturas tipo:" + aux[0].tipo);
+                            $('#data1').addClass("label label-success");
+                            $('#data1Fim').text("falta: " + tempo.horas + " horas " + tempo.minutos + " minutos " + tempo.segundos + " segundos terminar as candidaturas");
+                            $('#data1Fim').addClass("label label-warning");    
+                        } else {
+                            var tempo = HorasMinutosSegundos(aux[0].data1 * -1);
+                            $('#data1').text("falta: " + tempo.horas + " horas " + tempo.minutos + " minutos " + tempo.segundos + " segundos para iniciar a candidatura");
+                            $('#data1').addClass("label label-warning");
+                        }
 
-                    if (aux[1].data1 > 0) {
-                        $('#data2').text("Estamos em candidaturas tipo:" + aux[1].tipo);
-                    } else {
-                        $('#data2').text("falta: " + aux[1].data1.toString() + " horas para iniciar a candidaura");
                     }
+                
 
                     if (aux[1].data2 > 0) {
-                        $('#data2Fim').text("Terminou candidaturas");
+                        $('#data2Fim').text("Terminou candidaturas do tipo :" + aux[1].tipo);
+                        $('#data2Fim').addClass("label label-danger");
                     } else {
-                        $('#data2Fim').text("falta: " + aux[1].data2.toString()* -1 + " horas para acabar a candidaura");
+                        if (aux[1].data1 > 0) {
+                            var tempo = HorasMinutosSegundos(aux[0].data2 * -1);
+                            $('#data2').text("Estamos em candidaturas tipo:" + aux[1].tipo);
+                            $('#data2').addClass("label label-success");
+                            $('#data2Fim').text("falta: " + tempo.horas + " horas " + tempo.minutos + " minutos " + tempo.segundos + " segundos terminar as candidaturas");
+                            $('#data2Fim').addClass("label label-warning");
+                        } else {
+                            var tempo = HorasMinutosSegundos(aux[0].data1 * -1);
+                            $('#data2').text("falta: " + tempo.horas + " horas " + tempo.minutos + " minutos " + tempo.segundos + " segundos para iniciar a candidatura");
+                            $('#data2').addClass("label label-warning");    
+                        }
+
                     }
+
+                    setTimeout(horas(moment()), 1000);
+
+                    
                     
                 },
                 error: function (err) {
